@startuml

abstract Product {
    name : String
    category : ProductCategory
    getPrice() : Float
}

class StockableProduct {
    stock_units : Integer
    price : Float
}

class ServiceProduct {
    price_rules : [ServicePriceRule]
}

class PriceRule {
    recipient_product : Product
    price : Float
}

class CustomizableProduct {
    configuration : CustomizableProductConfiguration
    selected_values : [ProductOptionValue]
}

class PricingContext {
    applicable_products: [Product]
}


Product <|-- StockableProduct
Product <|-- ServiceProduct
Product <|-- CustomizableProduct
Product --> PricingContext

PriceRule <|-- NullPriceRule
ServiceProduct *-- "n" PriceRule
PriceRule o-- Product

CustomizableProduct --> PricingContext

PricingContext o--> Product


@enduml